// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<HorizontalAutoScroller /> > should match the snapshot for 8 items 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_alignItems_stretch_mobile__onxwjuk7 sprinkles_display_flex_mobile__onxwju77 sprinkles_flexDirection_column_mobile__onxwjumr sprinkles_gap_5_mobile__onxwjugv"
    data-od-component="horizontal-auto-scroller"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_overflow_hidden_mobile__onxwju7v sprinkles_position_relative_mobile__onxwju8v"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_alignItems_center_mobile__onxwjujv sprinkles_justifyContent_flex-start_mobile__onxwjukb sprinkles_position_absolute_mobile__onxwju8z HorizontalAutoScroller_controllerBtn__2i92q00 HorizontalAutoScroller_prevBtn__2i92q02"
      >
        <button
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_button__4z7xt311 reset_trimmedElement__4z7xt30 reset_button__4z7xt34 sprinkles_borderBottomStyle_solid__onxwju1b sprinkles_borderLeftStyle_solid__onxwju19 sprinkles_borderRightStyle_solid__onxwju1d sprinkles_borderTopStyle_solid__onxwju1f sprinkles_borderBottomWidth_none_mobile__onxwjubj sprinkles_borderLeftWidth_none_mobile__onxwjub3 sprinkles_borderRightWidth_none_mobile__onxwjubz sprinkles_borderTopWidth_none_mobile__onxwjucf sprinkles_paddingLeft_4_mobile__onxwjur3 sprinkles_paddingRight_4_mobile__onxwjus7 sprinkles_paddingTop_none_mobile__onxwjutz sprinkles_paddingBottom_none_mobile__onxwjuqn sprinkles_borderRadius_pill_mobile__onxwjuaj sprinkles_display_inline-block_mobile__onxwju7j sprinkles_overflow_hidden_mobile__onxwju7v sprinkles_textAlign_center_mobile__onxwju9f reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_fontSize_4__onxwju21 sprinkles_lineHeight_4__onxwju2a sprinkles_fontWeight_semiBold__onxwju2h sprinkles_color_white__onxwju6m typography_typographyStyles__yhjp330 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_iconOnly__p2yon59 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5i Button_button_compound_5__p2yon5o"
          type="button"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_height_full_mobile__onxwjudv sprinkles_alignItems_center_mobile__onxwjujv sprinkles_justifyContent_center_mobile__onxwjukf Button_body__p2yon50"
          >
            <span
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_display_block_mobile__onxwju6z Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            >
              <svg
                aria-hidden="true"
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju6z sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.414 16.584l-4.586-4.586 4.586-4.586-1.415-1.414-6 6 6 6 1.415-1.414z"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_paddingLeft_7_mobile__onxwjurf sprinkles_paddingLeft_8_tablet__onxwjurk sprinkles_paddingRight_7_mobile__onxwjusj sprinkles_paddingRight_8_tablet__onxwjuso sprinkles_alignItems_stretch_mobile__onxwjuk7 sprinkles_display_flex_mobile__onxwju77 sprinkles_overflow_hidden_mobile__onxwju7v sprinkles_flexWrap_nowrap_mobile__onxwjunj sprinkles_width_full_mobile__onxwjuff sprinkles_gap_7_mobile__onxwjuh3 sprinkles_gap_5_tablet__onxwjugw"
      >
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 HorizontalAutoScroller_controllerCol__2i92q01"
        >
          <span />
        </div>
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_flexGrow_0_mobile__onxwjun3 sprinkles_flexShrink_0_mobile__onxwjunb sprinkles_alignSelf_stretch_mobile__onxwjum7 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_height_full_mobile__onxwjudv sprinkles_width_full_mobile__onxwjuff"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff HorizontalAutoScroller_item__2i92q05 HorizontalAutoScroller_active__2i92q06"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_flexGrow_0_mobile__onxwjun3 sprinkles_flexShrink_0_mobile__onxwjunb sprinkles_alignSelf_stretch_mobile__onxwjum7 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_height_full_mobile__onxwjudv sprinkles_width_full_mobile__onxwjuff"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff HorizontalAutoScroller_item__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_flexGrow_0_mobile__onxwjun3 sprinkles_flexShrink_0_mobile__onxwjunb sprinkles_alignSelf_stretch_mobile__onxwjum7 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_height_full_mobile__onxwjudv sprinkles_width_full_mobile__onxwjuff"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff HorizontalAutoScroller_item__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_flexGrow_0_mobile__onxwjun3 sprinkles_flexShrink_0_mobile__onxwjunb sprinkles_alignSelf_stretch_mobile__onxwjum7 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_height_full_mobile__onxwjudv sprinkles_width_full_mobile__onxwjuff"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff HorizontalAutoScroller_item__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_flexGrow_0_mobile__onxwjun3 sprinkles_flexShrink_0_mobile__onxwjunb sprinkles_alignSelf_stretch_mobile__onxwjum7 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_height_full_mobile__onxwjudv sprinkles_width_full_mobile__onxwjuff"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff HorizontalAutoScroller_item__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_flexGrow_0_mobile__onxwjun3 sprinkles_flexShrink_0_mobile__onxwjunb sprinkles_alignSelf_stretch_mobile__onxwjum7 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_height_full_mobile__onxwjudv sprinkles_width_full_mobile__onxwjuff"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff HorizontalAutoScroller_item__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_flexGrow_0_mobile__onxwjun3 sprinkles_flexShrink_0_mobile__onxwjunb sprinkles_alignSelf_stretch_mobile__onxwjum7 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_height_full_mobile__onxwjudv sprinkles_width_full_mobile__onxwjuff"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff HorizontalAutoScroller_item__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_flexGrow_0_mobile__onxwjun3 sprinkles_flexShrink_0_mobile__onxwjunb sprinkles_alignSelf_stretch_mobile__onxwjum7 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_height_full_mobile__onxwjudv sprinkles_width_full_mobile__onxwjuff"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff HorizontalAutoScroller_item__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 HorizontalAutoScroller_controllerCol__2i92q01"
        >
          <span />
        </div>
      </div>
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_alignItems_center_mobile__onxwjujv sprinkles_justifyContent_flex-end_mobile__onxwjukj sprinkles_position_absolute_mobile__onxwju8z HorizontalAutoScroller_controllerBtn__2i92q00 HorizontalAutoScroller_nextBtn__2i92q03"
      >
        <button
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_button__4z7xt311 reset_trimmedElement__4z7xt30 reset_button__4z7xt34 sprinkles_borderBottomStyle_solid__onxwju1b sprinkles_borderLeftStyle_solid__onxwju19 sprinkles_borderRightStyle_solid__onxwju1d sprinkles_borderTopStyle_solid__onxwju1f sprinkles_borderBottomWidth_none_mobile__onxwjubj sprinkles_borderLeftWidth_none_mobile__onxwjub3 sprinkles_borderRightWidth_none_mobile__onxwjubz sprinkles_borderTopWidth_none_mobile__onxwjucf sprinkles_paddingLeft_4_mobile__onxwjur3 sprinkles_paddingRight_4_mobile__onxwjus7 sprinkles_paddingTop_none_mobile__onxwjutz sprinkles_paddingBottom_none_mobile__onxwjuqn sprinkles_borderRadius_pill_mobile__onxwjuaj sprinkles_display_inline-block_mobile__onxwju7j sprinkles_overflow_hidden_mobile__onxwju7v sprinkles_textAlign_center_mobile__onxwju9f reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_fontSize_4__onxwju21 sprinkles_lineHeight_4__onxwju2a sprinkles_fontWeight_semiBold__onxwju2h sprinkles_color_white__onxwju6m typography_typographyStyles__yhjp330 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_iconOnly__p2yon59 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5i Button_button_compound_5__p2yon5o"
          type="button"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_height_full_mobile__onxwjudv sprinkles_alignItems_center_mobile__onxwjujv sprinkles_justifyContent_center_mobile__onxwjukf Button_body__p2yon50"
          >
            <span
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_display_block_mobile__onxwju6z Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            >
              <svg
                aria-hidden="true"
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju6z sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.585 16.584l4.586-4.586-4.586-4.586L10 5.998l6 6-6 6-1.414-1.414z"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
    </div>
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_maxWidth_small_mobile__onxwjufn sprinkles_width_full_mobile__onxwjuff Section_root__184s6x60"
      >
        <div
          class="SliderProgress_root__17uw35s0"
          style="grid-template-columns: repeat(8, 1fr);"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_primary__onxwju2z ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_primary__onxwju2z ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_active__15qfq7e4 ProgressStep_paused__15qfq7e5"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_primary__onxwju2z ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_none_mobile__onxwju6v sprinkles_backgroundColor_primary__onxwju2z ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_primary__onxwju2z ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_none_mobile__onxwju6v sprinkles_backgroundColor_primary__onxwju2z ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_primary__onxwju2z ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_none_mobile__onxwju6v sprinkles_backgroundColor_primary__onxwju2z ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_primary__onxwju2z ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_none_mobile__onxwju6v sprinkles_backgroundColor_primary__onxwju2z ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_primary__onxwju2z ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_none_mobile__onxwju6v sprinkles_backgroundColor_primary__onxwju2z ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_primary__onxwju2z ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_none_mobile__onxwju6v sprinkles_backgroundColor_primary__onxwju2z ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_primary__onxwju2z ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_none_mobile__onxwju6v sprinkles_backgroundColor_primary__onxwju2z ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HorizontalAutoScroller /> > should match the snapshot with custom slider colour 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_alignItems_stretch_mobile__onxwjuk7 sprinkles_display_flex_mobile__onxwju77 sprinkles_flexDirection_column_mobile__onxwjumr sprinkles_gap_5_mobile__onxwjugv"
    data-od-component="horizontal-auto-scroller"
  >
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_overflow_hidden_mobile__onxwju7v sprinkles_position_relative_mobile__onxwju8v"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_alignItems_center_mobile__onxwjujv sprinkles_justifyContent_flex-start_mobile__onxwjukb sprinkles_position_absolute_mobile__onxwju8z HorizontalAutoScroller_controllerBtn__2i92q00 HorizontalAutoScroller_prevBtn__2i92q02"
      >
        <button
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_button__4z7xt311 reset_trimmedElement__4z7xt30 reset_button__4z7xt34 sprinkles_borderBottomStyle_solid__onxwju1b sprinkles_borderLeftStyle_solid__onxwju19 sprinkles_borderRightStyle_solid__onxwju1d sprinkles_borderTopStyle_solid__onxwju1f sprinkles_borderBottomWidth_none_mobile__onxwjubj sprinkles_borderLeftWidth_none_mobile__onxwjub3 sprinkles_borderRightWidth_none_mobile__onxwjubz sprinkles_borderTopWidth_none_mobile__onxwjucf sprinkles_paddingLeft_4_mobile__onxwjur3 sprinkles_paddingRight_4_mobile__onxwjus7 sprinkles_paddingTop_none_mobile__onxwjutz sprinkles_paddingBottom_none_mobile__onxwjuqn sprinkles_borderRadius_pill_mobile__onxwjuaj sprinkles_display_inline-block_mobile__onxwju7j sprinkles_overflow_hidden_mobile__onxwju7v sprinkles_textAlign_center_mobile__onxwju9f reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_fontSize_4__onxwju21 sprinkles_lineHeight_4__onxwju2a sprinkles_fontWeight_semiBold__onxwju2h sprinkles_color_white__onxwju6m typography_typographyStyles__yhjp330 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_iconOnly__p2yon59 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5i Button_button_compound_5__p2yon5o"
          type="button"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_height_full_mobile__onxwjudv sprinkles_alignItems_center_mobile__onxwjujv sprinkles_justifyContent_center_mobile__onxwjukf Button_body__p2yon50"
          >
            <span
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_display_block_mobile__onxwju6z Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            >
              <svg
                aria-hidden="true"
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju6z sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.414 16.584l-4.586-4.586 4.586-4.586-1.415-1.414-6 6 6 6 1.415-1.414z"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_paddingLeft_7_mobile__onxwjurf sprinkles_paddingLeft_8_tablet__onxwjurk sprinkles_paddingRight_7_mobile__onxwjusj sprinkles_paddingRight_8_tablet__onxwjuso sprinkles_alignItems_stretch_mobile__onxwjuk7 sprinkles_display_flex_mobile__onxwju77 sprinkles_overflow_hidden_mobile__onxwju7v sprinkles_flexWrap_nowrap_mobile__onxwjunj sprinkles_width_full_mobile__onxwjuff sprinkles_gap_7_mobile__onxwjuh3 sprinkles_gap_5_tablet__onxwjugw"
      >
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 HorizontalAutoScroller_controllerCol__2i92q01"
        >
          <span />
        </div>
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_flexGrow_0_mobile__onxwjun3 sprinkles_flexShrink_0_mobile__onxwjunb sprinkles_alignSelf_stretch_mobile__onxwjum7 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_height_full_mobile__onxwjudv sprinkles_width_full_mobile__onxwjuff"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff HorizontalAutoScroller_item__2i92q05 HorizontalAutoScroller_active__2i92q06"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_flexGrow_0_mobile__onxwjun3 sprinkles_flexShrink_0_mobile__onxwjunb sprinkles_alignSelf_stretch_mobile__onxwjum7 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_height_full_mobile__onxwjudv sprinkles_width_full_mobile__onxwjuff"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff HorizontalAutoScroller_item__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_flexGrow_0_mobile__onxwjun3 sprinkles_flexShrink_0_mobile__onxwjunb sprinkles_alignSelf_stretch_mobile__onxwjum7 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_height_full_mobile__onxwjudv sprinkles_width_full_mobile__onxwjuff"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff HorizontalAutoScroller_item__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_flexGrow_0_mobile__onxwjun3 sprinkles_flexShrink_0_mobile__onxwjunb sprinkles_alignSelf_stretch_mobile__onxwjum7 HorizontalAutoScroller_itemMinWidth__2i92q04 HorizontalAutoScroller_flexBasis_1/2_mobile__2i92q07"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_height_full_mobile__onxwjudv sprinkles_width_full_mobile__onxwjuff"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_width_full_mobile__onxwjuff HorizontalAutoScroller_item__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 HorizontalAutoScroller_controllerCol__2i92q01"
        >
          <span />
        </div>
      </div>
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_flex_mobile__onxwju77 sprinkles_alignItems_center_mobile__onxwjujv sprinkles_justifyContent_flex-end_mobile__onxwjukj sprinkles_position_absolute_mobile__onxwju8z HorizontalAutoScroller_controllerBtn__2i92q00 HorizontalAutoScroller_nextBtn__2i92q03"
      >
        <button
          class="reset_resetVariants__4z7xt3c reset_resetVariants_as_button__4z7xt311 reset_trimmedElement__4z7xt30 reset_button__4z7xt34 sprinkles_borderBottomStyle_solid__onxwju1b sprinkles_borderLeftStyle_solid__onxwju19 sprinkles_borderRightStyle_solid__onxwju1d sprinkles_borderTopStyle_solid__onxwju1f sprinkles_borderBottomWidth_none_mobile__onxwjubj sprinkles_borderLeftWidth_none_mobile__onxwjub3 sprinkles_borderRightWidth_none_mobile__onxwjubz sprinkles_borderTopWidth_none_mobile__onxwjucf sprinkles_paddingLeft_4_mobile__onxwjur3 sprinkles_paddingRight_4_mobile__onxwjus7 sprinkles_paddingTop_none_mobile__onxwjutz sprinkles_paddingBottom_none_mobile__onxwjuqn sprinkles_borderRadius_pill_mobile__onxwjuaj sprinkles_display_inline-block_mobile__onxwju7j sprinkles_overflow_hidden_mobile__onxwju7v sprinkles_textAlign_center_mobile__onxwju9f reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_fontSize_4__onxwju21 sprinkles_lineHeight_4__onxwju2a sprinkles_fontWeight_semiBold__onxwju2h sprinkles_color_white__onxwju6m typography_typographyStyles__yhjp330 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_iconOnly__p2yon59 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5i Button_button_compound_5__p2yon5o"
          type="button"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_height_full_mobile__onxwjudv sprinkles_alignItems_center_mobile__onxwjujv sprinkles_justifyContent_center_mobile__onxwjukf Button_body__p2yon50"
          >
            <span
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_span__4z7xt3l  sprinkles_display_block_mobile__onxwju6z Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            >
              <svg
                aria-hidden="true"
                class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_display_block_mobile__onxwju6z sprinkles_width_full_mobile__onxwjuff sprinkles_height_full_mobile__onxwjudv"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.585 16.584l4.586-4.586-4.586-4.586L10 5.998l6 6-6 6-1.414-1.414z"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
    </div>
    <div
      class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33"
    >
      <div
        class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_maxWidth_small_mobile__onxwjufn sprinkles_width_full_mobile__onxwjuff Section_root__184s6x60"
      >
        <div
          class="SliderProgress_root__17uw35s0"
          style="grid-template-columns: repeat(4, 1fr);"
        >
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_yellow500__onxwju4c ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_yellow500__onxwju4c ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_active__15qfq7e4 ProgressStep_paused__15qfq7e5"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_yellow500__onxwju4c ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_none_mobile__onxwju6v sprinkles_backgroundColor_yellow500__onxwju4c ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_yellow500__onxwju4c ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_none_mobile__onxwju6v sprinkles_backgroundColor_yellow500__onxwju4c ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
          <div
            class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_relative_mobile__onxwju8v SliderProgress_step__17uw35s1"
          >
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_block_mobile__onxwju6z sprinkles_backgroundColor_yellow500__onxwju4c ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
            />
            <div
              class="reset_resetVariants__4z7xt3c reset_resetVariants_as_div__4z7xt3d reset_block__4z7xt33 sprinkles_position_absolute_mobile__onxwju8z sprinkles_display_none_mobile__onxwju6v sprinkles_backgroundColor_yellow500__onxwju4c ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
              style="animation-duration: 10s;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
